--- a/MedicalAppointmentMVC/MedicalAppointmentMVC/MedicalAppointmentMVC.csproj
+++ b/MedicalAppointmentMVC/MedicalAppointmentMVC/MedicalAppointmentMVC.csproj
@@ -185,11 +185,14 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Appointment.cs" />
+    <Compile Include="Models\DoctorViewModel.cs" />
     <Compile Include="Models\Doctor_Detail.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MedicalContext.cs" />
+    <Compile Include="Models\NurseViewModel.cs" />
     <Compile Include="Models\Nurse_Detail.cs" />
+    <Compile Include="Models\PatientViewModel.cs" />
     <Compile Include="Models\Patient_Detail.cs" />
     <Compile Include="Models\Patient_Medical_History.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
