--- a/MedicalAppointmentMVC/MedicalAppointmentMVC/Web.config
+++ b/MedicalAppointmentMVC/MedicalAppointmentMVC/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <add name="MedicalContext" connectionString="Data Source=(Localdb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MedicalAppointmentMVC-20150917120652.mdf;Initial Catalog=aspnet-MedicalAppointmentMVC-20150917120652;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <!--  <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=SHAUN_IT;Initial Catalog=Medical; Integrated Security=True; MultipleActiveResultSets=True" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MedicalAppointmentMVC-20150917120652.mdf;Initial Catalog=aspnet-MedicalAppointmentMVC-20150917120652;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=SHAUN_IT;Initial Catalog=Medical; Integrated Security=True; MultipleActiveResultSets=True" />
     <add name="MedicalContext" providerName="System.Data.SqlClient" connectionString="Data Source=SHAUN_IT;Initial Catalog=Medical; Integrated Security=True; MultipleActiveResultSets=True" />-->
   </connectionStrings>
   <appSettings>
