--- a/MedicalAppointmentMVC/MedicalAppointmentMVC/MedicalAppointmentMVC.csproj
+++ b/MedicalAppointmentMVC/MedicalAppointmentMVC/MedicalAppointmentMVC.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Migrations\201509171350043_111.Designer.cs">
       <DependentUpon>201509171350043_111.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509251332_112.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Appointment.cs" />
