--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 MedicalAppointmentMVC/MedicalAppointmentMVC/App_Data/aspnet-MedicalAppointmentMVC-20150917120652_log.ldf
 MedicalAppointmentMVC/MedicalAppointmentMVC/App_Data/aspnet-MedicalAppointmentMVC-20150917120652.mdf
+MedicalAppointmentMVC/MedicalAppointmentMVC/App_Data/aspnet-MedicalAppointmentMVC-201509251332.mdf
+MedicalAppointmentMVC/MedicalAppointmentMVC/App_Data/aspnet-MedicalAppointmentMVC-201509251332_log.ldf
